--- a/template/html/connexion.html
+++ b/template/html/connexion.html
@@ -3,34 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,
-    initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="../css/connexion.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/d1a5a942fc.js" crossorigin="anonymous"></script>
 </head>
-
 <body onload="getCookieData()">
-    <div class="wrapper" id="loginForm">
-        <form action="" method="get">
-            <h1>Login</h1>
-            <div class="input-boxUser">
-                <label>
-                    <input type="text"
-                           id="userName"
-                           placeholder="Username" required>
-                </label>
-                <i class='bx bxs-user'></i>
-            </div>
-            <div class="input-boxPass">
-                <label>
-                    <input type="password"
-                           id="passWord"
-                           placeholder="Password"
-                           required>
-                </label>
-                <div class="eyePassword">
+<div class="wrapper" id="loginForm">
+    <form action="/login" method="post">
+        <h1>Login</h1>
+        <div class="input-boxUser">
+            <label>
+                <input type="text" id="userName" name="username" placeholder="Username" required>
+            </label>
+            <i class='bx bxs-user'></i>
+        </div>
+        <div class="input-boxPass">
+            <label>
+                <input type="password" id="passWord" name="password" placeholder="Password" required>
+            </label>
+            <div class="eyePassword">
                 <i class="fa-solid fa-eye"></i>
                 </div>
                 <i class='bx bxs-lock'></i>
@@ -84,60 +77,31 @@
         </form>
     </div>
 
-    <div class="wrapper-register" id="registerForm">
-        <form action="" method="post">
-            <div class="back-to-login">
-                <i class='bx bx-chevron-left'></i>
-                <p>
-                    <a href="#loginForm" class="login-link">Login</a>
-                </p>
+<div class="wrapper-register" id="registerForm">
+    <form action="/register" method="post">
+        <div class="back-to-login">
+            <i class='bx bx-chevron-left'></i>
+            <p><a href="#loginForm" class="login-link">Login</a></p>
+        </div>
+        <h1>Register</h1>
+        <div class="input-box">
+            <input type="text" name="username" placeholder="Username" required>
+            <i class='bx bxs-user'></i>
+        </div>
+        <div class="input-box">
+            <input type="email" name="email" placeholder="Email" required>
+            <i class='bx bxs-envelope'></i>
+        </div>
+        <div class="input-boxPass2">
+            <input type="password" name="password" placeholder="Password" required>
+            <div class="eyePassword2">
+                <i class="fa-solid fa-eye"></i>
             </div>
-            <div class="autentification">
-                <div class="autentification-google">
-                </div>
-                <div class="autentification-facebook">
-                </div>
-                <div class="autentification-github">
-                </div>
-            </div>
-            <h1>Register</h1>
-            <div class="input-box">
-                <input type="text"
-                       placeholder="Username"
-                       required>
-                <i class='bx bxs-user'></i>
-            </div>
-            <div class="input-box">
-                <input type="email"
-                       placeholder="Email"
-                       required>
-                <i class='bx bxs-envelope'></i>
-            </div>
-            <div class="input-boxPass2">
-                <input type="password"
-                       placeholder="Password"
-                       required>
-                <div class="eyePassword2">
-                    <i class="fa-solid fa-eye"></i>
-                </div>
-                <i class='bx bxs-lock'></i>
-            </div>
-            <button type="submit" class="btn">Register</button>
-            <script>
-                let input2 =document.querySelector('.input-boxPass2 input')
-                let showBtn2 =document.querySelector('.eyePassword2 i')
-                showBtn2.onclick=function () {
-                    if(input2.type === "password"){
-                        input2.type = "text";
-                        showBtn2.classList.add('active2');
-                    }else {
-                        input2.type = "password";
-                        showBtn2.classList.remove('active2');
-                    }
-                }
-            </script>
-        </form>
-    </div>
+            <i class='bx bxs-lock'></i>
+        </div>
+        <button type="submit" class="btn">Register</button>
+    </form>
+</div>
 
     <div class="forgot-password" id="forgotPassword">
         <form action="" method="post">
