--- a/template/html/connexion.html
+++ b/template/html/connexion.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../css/connexion.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/d1a5a942fc.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1/dist/confetti.browser.min.js"></script>
+
 </head>
 
 <body onload="getCookieData()">
