--- a/template/html/profil.html
+++ b/template/html/profil.html
@@ -34,10 +34,8 @@
         </div>
     </div>
 
-    <div class="post-detail">
-        <div class="post-feed">
-            <span class="author-topic">(mettre ses topic)</span>
-        </div>
+    <div class="topic-content">
+        <span class="author-topic">(mettre ses topics)</span>
     </div>
 
 </div>
