--- a/template/html/profil.html
+++ b/template/html/profil.html
@@ -26,10 +26,10 @@
 
             <div class="info-item"><span id="other-link">Other link :</span></div>
             <div class="links-section">
-                <a href="#" id="google-link">Google</a>
-                <a href="#" id="github-link">Github</a>
-                <a href="#" id="riot-client-link">Riot Games</a>
-                <a href="#" id="facebook-link">Facebook</a>
+                <a href="#" id="googleLink">Google</a>
+                <a href="#" id="githubLink">Github</a>
+                <a href="#" id="riotClientLink">Riot Games</a>
+                <a href="#" id="facebookLink">Facebook</a>
             </div>
         </div>
     </div>
