[Main/Server] server less mux library:white_check_mark:

--- a/template/html/accueil.html
+++ b/template/html/accueil.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/style/accueil.css">
-    <link rel="icon" type="image/vnd.icon" href="../ressource/image/maga.JPG">
+    <link rel="stylesheet" type="text/css" href="/css/accueil.css">
+    <link rel="icon" type="image/vnd.icon" href="/ressource/image/maga.JPG">
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1/dist/confetti.browser.min.js"></script>
     <script src="/script/accueil.js"></script>
     <title>Le Forum</title>
     <title>Forum</title>
-    <link rel="stylesheet" href="../css/accueil.css">
-</head>
 
 <body>
 
