--- a/template/html/tipoc.html
+++ b/template/html/tipoc.html
@@ -9,9 +9,8 @@
 <body>
 <div class="container">
     <div class="profile-section">
-        
         <div>
-        <button class="profileBtn" type="submit" formmethod="get">Profile</button>
+            <button class="profileBtn" type="submit" formmethod="get">Profile</button>
         </div>
         <div class="star"></div>
         <div class="star1"></div>
@@ -27,24 +26,17 @@
                 <div class="post-title">Contenu du Post</div>
                 <div class="postContent">Post: <span class="content-Post">Contenu du Post</span></div>
                 <div class="post-author">Auteur: <span class="author-name">Nom de l'utilisateur</span></div>
-                <!-- add like/dislike and share btn -->
-                <div class="interaction-buttons">
-                    <button class="like-button">Like</button>
-                    <span class="like-count">0</span>
-                    <button class="dislike-button">Dislike</button>
-                    <span class="dislike-count">0</span>
-                    <button class="share-button">Share</button>
-                    <span class="share-count">0</span>
-                </div>
             </div>
             <div class="comments">
                 <h3>Commentaires</h3>
                 <div class="comment">
-                    <div class="comment-author">Auteur: <span class="author-name">Nom de l'utilisateur</span></div>
-                    <textarea class="comment-text" placeholder="Ajoutez un commentaire ici."></textarea>
-                    <button class="comment-button">Commenter</button>
+                    <div class="post-author">Auteur: <span class="author-name">Nom de l'utilisateur</span></div>
+                    <label>
+                        <textarea class="comment-text" placeholder="Commentaire sur le post."></textarea>
+                    </label>
                 </div>
             </div>
+            <button class="comment-Button" formmethod="post">COMMENTEZ</button>
         </div>
     </div>
 
@@ -62,8 +54,9 @@
             </form>
             <h3>Categories</h3>
             <ul id="categoriesList">
-                <li>Category 1</li>
-                <li>Category 2</li>
+                <li>Granny</li>
+                <li>Granny</li>
+                <li>Granny</li>
             </ul>
         </div>
         <div class="hashtags">
@@ -73,8 +66,8 @@
             </form>
             <h3>Hashtags</h3>
             <ul id="hashtagsList">
-                <li>#hashtag1</li>
-                <li>#hashtag2</li>
+                <li>#mesboules</li>
+                <li>#mesboules</li>
             </ul>
         </div>
     </div>
