[origin/main/Filtres] div added

--- a/template/css/accueil.css
+++ b/template/css/accueil.css
@@ -119,7 +119,7 @@ body {
     border-radius: 8px;
 }
 
-.categories, .hashtags {
+.categories, .hashtags, .filters {
     padding: 10px;
     margin-bottom: 10px;
     background: rgba(255, 255, 255, 0.15);
