--- a/template/html/accueil.html
+++ b/template/html/accueil.html
@@ -16,6 +16,15 @@
 <div class="container">
     <div class="profile-section">
         <div class="profile">Profile</div>
+
+        <div class="filters">
+            <h3>Filtres :</h3>
+            <ul id="filterList">
+                <li id="dateFilter">#mesboules</li>
+                <li id="likeNmb">#mesboules</li>
+            </ul>
+        </div>
+
     </div>
     <div class="main-section">
         <div class="title">Bienvenue sur le Forum</div>
