[origin/main/Filtres] div added try to change page

--- a/template/css/accueil.css
+++ b/template/css/accueil.css
@@ -118,8 +118,19 @@ body {
     background: rgba(255, 255, 255, 0.1);
     border-radius: 8px;
 }
+.filters{
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    background: rgba(255, 255, 255, 0.15);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8.3px);
+    -webkit-backdrop-filter: blur(8.3px);
+    border: 1px solid rgba(255, 255, 255, 0.12);
+}
 
-.categories, .hashtags, .filters {
+.categories, .hashtags {
     padding: 10px;
     margin-bottom: 10px;
     background: rgba(255, 255, 255, 0.15);
