--- a/template/html/accueil.html
+++ b/template/html/accueil.html
@@ -12,7 +12,12 @@
     <title>Forum</title>
 
 <body>
-
+    <form id="searchForm">
+        <input type="text" id="searchInput" placeholder="Search topics or users...">
+        <button type="submit">Search</button>
+    </form>
+    <div id="searchResults"></div>
+    
 <div class="container">
     <div class="profile-section">
         <div class="profile">Profile</div>
