--- a/template/html/contact.html
+++ b/template/html/contact.html
@@ -11,21 +11,23 @@
     <div class="card1">
         <img src="./image/profilAlexis.jpg" alt="Alexis" style="width:100%">
         <h1>Alexis mon ami</h1>
-        <p class="title">CEO & Founder, Example</p>
+        <p class="title">CEO & Founder, inginer bdd</p>
         <p>Ynov University</p>
         <p><button>Contact</button></p>
     </div>
     <div class="card2">
         <img src="./image/paulo-golemo.jpg" alt="Paulo" style="width:100%">
         <h1>Paulo mon amigo</h1>
-        <p class="title">CEO & Founder, Example</p>
+        <p class="title">CEO & Founder, frontEnd</p>
         <p>Ynov University</p>
-        <p><button>Contact</button></p>
+        <p>
+            <a href="/block"><button>Contact</button></a>
+        </p>
     </div>
     <div class="card3">
         <img src="./image/Kevino-grosDodo.jpg" alt="Kevin" style="width:100%">
         <h1>Kevin gros dodo</h1>
-        <p class="title">CEO & Founder, Example</p>
+        <p class="title">CEO & Founder, BackEnd</p>
         <p>Ynov University</p>
         <p><button>Contact</button></p>
     </div>
@@ -33,14 +35,14 @@
     <div class="card4">
         <img src="./image/Rayano.jpg" alt="Ryan" style="width:100%">
         <h1>Rayan super sayan</h1>
-        <p class="title">CEO & Founder, Example</p>
+        <p class="title">CEO & Founder, inginer bdd</p>
         <p>Ynov University</p>
         <p><button>Contact</button></p>
     </div>
     <div class="card5">
         <img src="./image/LouisCharizard.jpg" alt="Louis" style="width:100%">
         <h1>Louis Le Boss</h1>
-        <p class="title">CEO & Founder, Example</p>
+        <p class="title">CEO & Founder, designer</p>
         <p>Ynov University</p>
         <p><button>Contact</button></p>
     </div>
